--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 # Logs
 logs
 *.log
+
+# Compiled binary
+build
+
+# Dependency directories
+node_modules
+build/node_modules
+
+# Optional npm cache directory
+.npm
