--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   "license": "MIT",
   "devDependencies": {
     "typescript": "^2.1.5"
+  },
+  "repository": {
+  "type": "git",
+  "url": "https://github.com/pixelsnow/arkanoid-uni.git"
   }
 }
